syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
}

message CreateOrderRequest {
  string customerId = 1;
  repeated OrderItem items = 2;
}

message GetOrderRequest {
  string orderId = 1;
}

message OrderItem {
  string productId = 1;
  int32 quantity = 2;
  double unitPrice = 3;
}

message OrderResponse {
  string id = 1;
  string customerId = 2;
  string status = 3;
  double totalAmount = 4;
  repeated OrderItem items = 5;
}
